Increase size of stacked blocks and fix gaps

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -64,8 +64,8 @@
 
 .transition-stack {
   width: 100%;
-  height: 125px;
-  margin: 125px 0 0 0;
+  height: 200px;
+  margin: 200px 0 0 0;
   transform: translateY(-50%);
   z-index: 10;
   position: relative;
@@ -76,5 +76,5 @@
 
 .transition-stack-reverse {
   transform: rotate(180deg) translateY(-50%);
-  margin: 0 0 125px 0;
+  margin: 0 0 200px 0;
 }
